--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native/babel-preset": "^0.75.3",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/react-native": "^12.7.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.2.0",
-    "react-native": "0.72.17"
+    "react-native": "0.72.17",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
